<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.isanwenyu.topsnackbar.demo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:title="@string/app_name" />

        <Button
            android:id="@+id/btn_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:onClick="onClick"
            android:text="@string/btn_top_snackbar_success" />

        <Button
            android:id="@+id/btn_fail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:onClick="onClick"
            android:text="@string/btn_top_snackbar_fail" />

        <Button
            android:id="@+id/btn_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:onClick="onClick"
            android:text="@string/btn_top_snackbar_with_action" />

        <Button
            android:id="@+id/btn_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:onClick="onClick"
            android:text="@string/btn_snackbar_with_action"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
